InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextScope__c/fields/vlocity_ins__Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>