InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextScope__c/fields/vlocity_ins__EntityPath__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EntityPath__c</fullName>
    <label>Entity Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>