InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextScope__c/fields/vlocity_ins__GlobalKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__GlobalKey__c</fullName>
    <externalId>true</externalId>
    <label>Global Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>