InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContextScope__c/fields/vlocity_ins__ScopeType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ScopeType__c</fullName>
    <label>Scope Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>